fix: adjust z-index for improved layering; update live project link; enhance service tags styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -287,6 +287,7 @@ body {
   position: relative;
   transition: all 0.4s ease-in-out;
   overflow: hidden;
+  z-index: 10 !important;
 }
 .service-item::after,
 .service-item::before {
@@ -298,13 +299,13 @@ body {
   top: 0;
   @apply bg-primary-1000;
   opacity: 0.8;
-  z-index: -10;
   transition: all 0.4s ease-in-out;
   clip-path: circle(28% at 100% 0);
 }
 .service-item:hover::after {
   width: 100%;
   height: 100%;
+   @apply bg-primary-1000/50;
   clip-path: circle(40.4% at 100% 0);
 }
 .service-item::before {
@@ -315,6 +316,7 @@ body {
 .service-item:hover::before {
   width: 100%;
   height: 100%;
+  @apply bg-primary-1000/50;
   clip-path: circle(20.5% at 0 100%);
 }
 .service-item:hover {
